--- a/index.html
+++ b/index.html
@@ -6,6 +6,5 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe width="100%" height="1000" src="https://miro.com/app/live-embed/uXjVLTq72k4=/?moveToViewport=-1228,-527,2401,1139&embedId=13160587968" frameborder="0" scrolling="no" allow="fullscreen; clipboard-read; clipboard-write" allowfullscreen></iframe>
-</body>
+    <iframe width="100%" height="1000" src="https://miro.com/app/live-embed/uXjVLTq72k4=/?moveToViewport=-1090,-521,2123,1125&embedId=507248216690" frameborder="0" scrolling="no" allow="fullscreen; clipboard-read; clipboard-write" allowfullscreen></iframe></body>
 </html>
